src/generated/wmsml_parser.js
// Generated by scripts/generate_assets.ts. Do not edit by hand.
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = "val";
  const peg$c1 = "and";
  const peg$c2 = "rec";
  const peg$c3 = "=";
  const peg$c4 = "datatype";
  const peg$c5 = "|";
  const peg$c6 = "of";
  const peg$c7 = "fn";
  const peg$c8 = "=>";
  const peg$c9 = "case";
  const peg$c10 = "if";
  const peg$c11 = "then";
  const peg$c12 = "else";
  const peg$c13 = "<>";
  const peg$c14 = "<=";
  const peg$c15 = ">=";
  const peg$c16 = "div";
  const peg$c17 = "mod";
  const peg$c18 = "~";
  const peg$c19 = "(";
  const peg$c20 = ",";
  const peg$c21 = ")";
  const peg$c22 = "_";
  const peg$c23 = ":";
  const peg$c24 = "->";
  const peg$c25 = "*";
  const peg$c26 = "\"";
  const peg$c27 = "\\n";
  const peg$c28 = "\\t";
  const peg$c29 = "\\\"";
  const peg$c30 = "\\\\";
  const peg$c31 = "true";
  const peg$c32 = "false";
  const peg$c33 = "'";
  const peg$c34 = ".";
  const peg$c35 = ";";
  const peg$c36 = "(*";
  const peg$c37 = "*)";

  const peg$r0 = /^[<>]/;
  const peg$r1 = /^[+\-]/;
  const peg$r2 = /^[*\/]/;
  const peg$r3 = /^[0-9]/;
  const peg$r4 = /^["\\]/;
  const peg$r5 = /^[a-zA-Z_]/;
  const peg$r6 = /^[a-zA-Z0-9_]/;
  const peg$r7 = /^[A-Z]/;
  const peg$r8 = /^[a-zA-Z0-9_']/;
  const peg$r9 = /^[ \t\r\n]/;

  const peg$e0 = peg$literalExpectation("val", false);
  const peg$e1 = peg$literalExpectation("and", false);
  const peg$e2 = peg$literalExpectation("rec", false);
  const peg$e3 = peg$literalExpectation("=", false);
  const peg$e4 = peg$literalExpectation("datatype", false);
  const peg$e5 = peg$literalExpectation("|", false);
  const peg$e6 = peg$literalExpectation("of", false);
  const peg$e7 = peg$literalExpectation("fn", false);
  const peg$e8 = peg$literalExpectation("=>", false);
  const peg$e9 = peg$literalExpectation("case", false);
  const peg$e10 = peg$literalExpectation("if", false);
  const peg$e11 = peg$literalExpectation("then", false);
  const peg$e12 = peg$literalExpectation("else", false);
  const peg$e13 = peg$literalExpectation("<>", false);
  const peg$e14 = peg$literalExpectation("<=", false);
  const peg$e15 = peg$literalExpectation(">=", false);
  const peg$e16 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e17 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e18 = peg$classExpectation(["*", "/"], false, false, false);
  const peg$e19 = peg$literalExpectation("div", false);
  const peg$e20 = peg$literalExpectation("mod", false);
  const peg$e21 = peg$literalExpectation("~", false);
  const peg$e22 = peg$literalExpectation("(", false);
  const peg$e23 = peg$literalExpectation(",", false);
  const peg$e24 = peg$literalExpectation(")", false);
  const peg$e25 = peg$literalExpectation("_", false);
  const peg$e26 = peg$literalExpectation(":", false);
  const peg$e27 = peg$literalExpectation("->", false);
  const peg$e28 = peg$literalExpectation("*", false);
  const peg$e29 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e30 = peg$literalExpectation("\"", false);
  const peg$e31 = peg$literalExpectation("\\n", false);
  const peg$e32 = peg$literalExpectation("\\t", false);
  const peg$e33 = peg$literalExpectation("\\\"", false);
  const peg$e34 = peg$literalExpectation("\\\\", false);
  const peg$e35 = peg$classExpectation(["\"", "\\"], false, false, false);
  const peg$e36 = peg$anyExpectation();
  const peg$e37 = peg$literalExpectation("true", false);
  const peg$e38 = peg$literalExpectation("false", false);
  const peg$e39 = peg$literalExpectation("'", false);
  const peg$e40 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e41 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e42 = peg$classExpectation([["A", "Z"]], false, false, false);
  const peg$e43 = peg$literalExpectation(".", false);
  const peg$e44 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "'"], false, false, false);
  const peg$e45 = peg$literalExpectation(";", false);
  const peg$e46 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false, false);
  const peg$e47 = peg$literalExpectation("(*", false);
  const peg$e48 = peg$literalExpectation("*)", false);

  function peg$f0(d) {    return d;  }
  function peg$f1(decls) {    return mod(decls);  }
  function peg$f2(first, b) {    return b;  }
  function peg$f3(first, rest) {    return { kind: "LetDecl", exported: false, recursive: false, bindings: [first, ...rest] };  }
  function peg$f4(first, b) {    return b;  }
  function peg$f5(first, rest) {
    const bindings = [first, ...rest];
    bindings.forEach((binding) => constructors.delete(binding.pattern.name));
    return { kind: "LetDecl", exported: false, recursive: true, bindings };
  }
  function peg$f6(pattern, ann, value) {    return { pattern, annotation: ann, value };  }
  function peg$f7(name, ann, value) {    return { pattern: { kind: "PVar", name }, annotation: ann, value };  }
  function peg$f8(params, name, ctors) {    return { kind: "TypeDecl", exported: false, name, params: params ?? [], ctors, hasLeadingPipe: false };  }
  function peg$f9(vars) {    return vars;  }
  function peg$f10(v) {    return [v];  }
  function peg$f11(first, c) {    return c;  }
  function peg$f12(first, rest) {    return [first, ...rest];  }
  function peg$f13(name, arg) {    return { name: ctorName(name), args: arg.kind === "TTuple" ? arg.items : [arg] };  }
  function peg$f14(name) {    return { name: ctorName(name), args: [] };  }
  function peg$f15(p, body) {    return { kind: "Lambda", params: [{ pattern: p }], directives: [], body };  }
  function peg$f16(value, arms) {    return { kind: "Match", value, arms };  }
  function peg$f17(first, a) {    return a;  }
  function peg$f18(first, rest) {    return [first, ...rest];  }
  function peg$f19(pattern, body) {    return { pattern, body };  }
  function peg$f20(cond, thenExpr, elseExpr) {    return { kind: "If", cond, thenExpr, elseExpr };  }
  function peg$f21(left, op, right) {    return { op, right };  }
  function peg$f22(left, rest) {    return rest.reduce((left, r) => ({ kind: "Binary", op: r.op === "=" ? "==" : "!=", left, right: r.right }), left);  }
  function peg$f23(left, op, right) {    return { op, right };  }
  function peg$f24(left, rest) {    return rest.reduce((left, r) => ({ kind: "Binary", op: r.op, left, right: r.right }), left);  }
  function peg$f25(left, op, right) {    return { op, right };  }
  function peg$f26(left, rest) {    return rest.reduce((left, r) => ({ kind: "Binary", op: r.op, left, right: r.right }), left);  }
  function peg$f27(left, op, right) {    return { op, right };  }
  function peg$f28(left, rest) {    return rest.reduce((left, r) => ({ kind: "Binary", op: r.op === "div" ? "/" : r.op === "mod" ? "%" : r.op, left, right: r.right }), left);  }
  function peg$f29(head, a) {    return a;  }
  function peg$f30(head, tail) {    return tail.reduce(call, head);  }
  function peg$f31(value) {    return { kind: "Unary", op: "-", value };  }
  function peg$f32(v) {    return { kind: "Var", name: v };  }
  function peg$f33(first, rest) {    return tuple([first, ...rest]);  }
  function peg$f34(e) {    return e;  }
  function peg$f35() {    return { kind: "PWildcard" };  }
  function peg$f36(first, rest) {    return tuplePattern([first, ...rest]);  }
  function peg$f37(name, arg) {    return ctorPattern(name, arg);  }
  function peg$f38(name) {    return patternName(name);  }
  function peg$f39(first, rest) {    return tuplePattern([first, ...rest]);  }
  function peg$f40(p) {    return p;  }
  function peg$f41(name) {    return patternName(name);  }
  function peg$f42(first, p) {    return p;  }
  function peg$f43(first, rest) {    return [first, ...rest];  }
  function peg$f44(t) {    return t;  }
  function peg$f45(left, right) {    return { kind: "TFn", params: [left], result: right };  }
  function peg$f46(first, t) {    return t;  }
  function peg$f47(first, rest) {    return rest.length ? { kind: "TTuple", items: [first, ...rest] } : first;  }
  function peg$f48(arg, name) {    return { kind: "TName", name: typeName(name), args: [arg] };  }
  function peg$f49(args, name) {    return { kind: "TName", name: typeName(name), args };  }
  function peg$f50(v) {    return { kind: "TVar", name: v };  }
  function peg$f51(name) {    return { kind: "TName", name: typeName(name), args: [] };  }
  function peg$f52(t) {    return t;  }
  function peg$f53(first, rest) {    return [first, ...rest];  }
  function peg$f54(first, rest) {    return [first, ...rest];  }
  function peg$f55(first, v) {    return v;  }
  function peg$f56(first, rest) {    return [first, ...rest];  }
  function peg$f57(first, t) {    return t;  }
  function peg$f58(first, rest) {    return [first, ...rest];  }
  function peg$f59(first, e) {    return e;  }
  function peg$f60(first, rest) {    return [first, ...rest];  }
  function peg$f61(n) {    return { kind: "Int", value: Number(n) };  }
  function peg$f62(n) {    return { kind: "PInt", value: Number(n) };  }
  function peg$f63(chars) {    return { kind: "String", value: chars.join("") };  }
  function peg$f64(chars) {    return { kind: "PString", value: chars.join("") };  }
  function peg$f65() {    return "\n";  }
  function peg$f66() {    return "\t";  }
  function peg$f67() {    return "\""  }
  function peg$f68() {    return "\\";  }
  function peg$f69(c) {    return c;  }
  function peg$f70(v) {    return { kind: "Bool", value: v === "true" };  }
  function peg$f71(v) {    return { kind: "PBool", value: v === "true" };  }
  function peg$f72() {    return { kind: "Void" };  }
  function peg$f73() {    return { kind: "PVoid" };  }
  function peg$f74(name) {    return name;  }
  function peg$f75(name) {    return name;  }
  function peg$f76(name) {    return name;  }
  function peg$f77(name) {    return name;  }
  function peg$f78(first, n) {    return n;  }
  function peg$f79(first, rest) {    return [first, ...rest].join(".");  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$resultsCache = {};

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 60 + 0;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parse_();
    s5 = peg$parseTopDecl();
    if (s5 !== peg$FAILED) {
      s6 = peg$parse_();
      s7 = peg$parseSemi();
      if (s7 === peg$FAILED) {
        s7 = null;
      }
      peg$savedPos = s3;
      s3 = peg$f0(s5);
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseTopDecl();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseSemi();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        peg$savedPos = s3;
        s3 = peg$f0(s5);
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    s3 = peg$parse_();
    s4 = peg$parseEOF();
    if (s4 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseTopDecl() {
    let s0;

    const key = peg$currPos * 60 + 1;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseDatatypeDecl();
    if (s0 === peg$FAILED) {
      s0 = peg$parseValDecl();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseValDecl() {
    let s0;

    const key = peg$currPos * 60 + 2;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseRecValDecl();
    if (s0 === peg$FAILED) {
      s0 = peg$parsePlainValDecl();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsePlainValDecl() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    const key = peg$currPos * 60 + 3;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseValBinding();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$currPos;
          s6 = peg$parse_();
          if (input.substr(peg$currPos, 3) === peg$c1) {
            s7 = peg$c1;
            peg$currPos += 3;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse__();
            if (s8 !== peg$FAILED) {
              s9 = peg$parseValBinding();
              if (s9 !== peg$FAILED) {
                peg$savedPos = s5;
                s5 = peg$f2(s3, s9);
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$currPos;
            s6 = peg$parse_();
            if (input.substr(peg$currPos, 3) === peg$c1) {
              s7 = peg$c1;
              peg$currPos += 3;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parse__();
              if (s8 !== peg$FAILED) {
                s9 = peg$parseValBinding();
                if (s9 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s5 = peg$f2(s3, s9);
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          }
          peg$savedPos = s0;
          s0 = peg$f3(s3, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseRecValDecl() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    const key = peg$currPos * 60 + 4;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
